<resources>
    <string name="app_name">Rate My Ride</string>
    <string name="welcome">Welcome</string>
    <string name="to">To</string>
    <string name="rate_my_ride">Rate My Ride!</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="action_settings">ForkIt</string>
    <string name="sign_up_with_a_ride">Sign Up With a Ride</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="sign_up_with_ride">Sign Up With Ride</string>
    <string name="sign_up_without_a_ride">Sign Up Without a Ride</string>
    <string name="log_in">Log In</string>
    <string name="total_rating">Total Rating:</string>
    <string name="carimage1">carImage1</string>
    <string name="carimage2">carImage2</string>
    <string name="carimage3">carImage3</string>
    <string name="carimage4">carImage4</string>
    <string name="carimage5">carImage5</string>
    <string name="carimage6">carImage6</string>
    <string name="carimage7">carImage7</string>
    <string name="carimage8">carImage8</string>
    <string name="carimage9">carImage9</string>
    <string name="carimage10">carImage10</string>
    <string name="feed">Feed</string>
    <string name="rated">Rated</string>
    <string name="my_garage">My Garage</string>
    <string name="secondcarimagebutton">SecondCarImageButton</string>
    <string name="carimagebutton">carImageButton</string>
    <string name="remove_ride">Remove Ride</string>
    <string name="add_ride">Add Ride</string>
    <string name="add_new_car">Add New Car</string>
    <string name="delete_image">Delete Image?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="add_a_ride">Add A Ride</string>
    <string name="finish">Finish</string>
    <string name="design">Design</string>
    <string name="color">Color</string>
    <string name="carimages">CarImages</string>
    <string name="edit_ride">Edit Ride?</string>
    <string name="rating">Rating:</string>

</resources>
