<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/ECFinishedBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_design"
        android:text="@string/finish"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/ECFinishedBT">

        <LinearLayout
            android:id="@+id/ECImageLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/ECCarImage1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage1"
                android:scaleType="centerCrop"
                android:src="@drawable/plus" />

            <ImageButton
                android:id="@+id/ECCarImage2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage2"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage3"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage4"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage5"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage6"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage7"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage7"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage8"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage8"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage9"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage9"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ECCarImage10"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@android:color/black"
                android:contentDescription="@string/carimage10"
                android:scaleType="centerCrop"
                android:src="@drawable/plus"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>