<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <EditText
        android:id="@+id/addingCarMakeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/make"
        android:hint="@string/make"
        android:inputType="text"
        android:paddingTop="20dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/addingCarModelET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:paddingTop="20dp"
        android:text="@string/model"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/addingCarYearET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/year"
        android:hint="@string/year"
        android:inputType="number"
        android:paddingTop="20dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/add_car_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_design"
        android:text="@string/add_ride"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


</LinearLayout>