<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="185dp"
    android:layout_height="75dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:id="@+id/deleteTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_ride"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/deleteTV">

        <Button
            android:id="@+id/ECDYesBT"
            android:layout_width="wrap_content"
            android:background="@drawable/button_design"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:text="@string/yes" />

        <Button
            android:id="@+id/ECDNoBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:textColor="@color/colorAccent"
            android:text="@string/no" />
    </LinearLayout>
</RelativeLayout>