<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtUsername2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/carImageView"
            android:layout_width="140dp"
            android:layout_height="140sp"
            android:adjustViewBounds="true"
            android:background="@android:color/black"
            android:contentDescription="@string/secondcarimagebutton"
            android:scaleType="fitXY" />


        <TextView
            android:id="@+id/txtRating2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rating"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>